Fix darkest variant scale slider not visible

--- a/Flat-Remix-GTK-Blue-Darkest-Solid-NoBorder/gtk-3.0/gtk.css
+++ b/Flat-Remix-GTK-Blue-Darkest-Solid-NoBorder/gtk-3.0/gtk.css
@@ -2079,7 +2079,7 @@ scale {
     scale fill:disabled {
       background-color: transparent; }
   scale slider {
-    background-color: #050505;
+    background-color: #262626;
     border: 1px solid #141414;
     border-radius: 100%;
     transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
